<resources>
    <string name="app_name">AndroidTesting</string>
    <string name="switch_activity">Switch activity</string>
    <string name="toast">this is a toast</string>
    <string name="btn_toast">Click to toast</string>
    <string name="done">Done !</string>
    <string name="task_runnning">Task is running…</string>
    <string name="btn_async">Launch Async task</string>
    <string name="async">Asynchronous</string>
    <string name="main_input_hint">Enter input to be passed to nex activity</string>
</resources>
